--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: SyniRon/profMetrics:master
+      - uses: SyniRon/profMetrics@master
         with:
           # Your GitHub token
           # The following scopes are required:
