--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,4 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           # Options
           template: classic
+          base: header, activity, community, repositories, metadata
