--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,4 @@ jobs:
           # Options
           template: classic
           base: header, activity, community, repositories, metadata
+          config_display: large
