--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,4 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_display: large
+          config_timezone: America/New_York
