--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,4 @@ jobs:
           config_display: large
           config_timezone: America/New_York
           plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
