--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,4 @@ jobs:
           config_timezone: America/New_York
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
+          plugin_lines: yes
