--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Metrics
 on:
   # Schedule daily updates
-  schedule: [{ cron: "0 */6 * * *" }]
+  schedule: [{ cron: "0 */12 * * *" }]
   # (optional) Run workflow manually
   workflow_dispatch:
   # (optional) Run workflow when pushing on master/main
@@ -23,3 +23,7 @@ jobs:
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_achievements: yes
+          plugin_achievements_threshold: B
+          plugin_habits: yes
+          plugin_habits_facts: yes
+          plugin_habits_charts: yes
